md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -84,8 +84,39 @@ X[:5], y[:5]
 ```
 ---
 ###  Splitting data into training and test sets
+
+<table>
+<thead>
+<tr>
+  <th>Split</th>
+  <th>Purpose</th>
+  <th>Amount of total data</th>
+  <th>How often is it used?</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td><strong>Training set</strong></td>
+  <td>The model learns from this data (like the course materials you study during the semester).</td>
+  <td>~60-80%</td>
+  <td>Always</td>
+</tr>
+<tr>
+  <td><strong>Validation set</strong></td>
+  <td>The model gets tuned on this data (like the practice exam you take before the final exam).</td>
+  <td>~10-20%</td>
+  <td>Often but not always</td>
+</tr>
+<tr>
+  <td><strong>Testing set</strong></td>
+  <td>The model gets evaluated on this data to test what it has learned (like the final exam you take at the end of the semester).</td>
+  <td>~10-20%</td>
+  <td>Always</td>
+</tr>
+</tbody>
+</table>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNT
-YxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NT
+M5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4
+OCw3MzA5OTgxMTZdfQ==
 -->
