md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -84,7 +84,9 @@ X[:5], y[:5]
 ```
 ---
 ###  Splitting data into training and test sets
+One of most important steps in a machine learning project is creating a training and test set (and when required, a validation set).
 
+Each split of the dataset serves a specific purpose:
 <table>
 <thead>
 <tr>
@@ -116,7 +118,7 @@ X[:5], y[:5]
 </tbody>
 </table>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NT
-M5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4
-OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTI5NzQxMTYwMyw3Njc4OTI2NCwtMjExMT
+Y2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMy
+LC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
