--- a/md/01.md
+++ b/md/01.md
@@ -70,6 +70,7 @@ X = torch.arange(start, end, step).unsqueeze(dim=1)
 y = weight * X + bias
 X[:5], y[:5]
 ```
+
 ```cpp
 (tensor([[0.0000],
          [0.0200],
@@ -82,11 +83,15 @@ X[:5], y[:5]
          [0.3420],
          [0.3560]]))
 ```
+
 ---
+
 ###  Splitting data into training and test sets
+
 One of most important steps in a machine learning project is creating a training and test set (and when required, a validation set).
 
 Each split of the dataset serves a specific purpose:
+
 <table>
 <thead>
 <tr>
@@ -117,8 +122,18 @@ Each split of the dataset serves a specific purpose:
 </tr>
 </tbody>
 </table>
+
+For now, we'll just use a training and test set, this means we'll have a dataset for our model to learn on as well as be evaluated on. We can create them by splitting our `X` and `y` tensors.
+```py
+# Create train/test split
+train_split = int(0.8 * len(X)) # 80% of data used for training set, 20% for testing 
+X_train, y_train = X[:train_split], y[:train_split]
+X_test, y_test = X[train_split:], y[train_split:]
+
+len(X_train), len(y_train), len(X_test), len(y_test)
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NzQxMTYwMyw3Njc4OTI2NCwtMjExMT
-Y2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMy
-LC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE5NDExODQxMDYsNzY3ODkyNjQsLTIxMT
+E2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQz
+MiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
 -->
