md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -132,8 +132,14 @@ X_test, y_test = X[train_split:], y[train_split:]
 
 len(X_train), len(y_train), len(X_test), len(y_test)
 ```
+
+```cpp
+(40, 40, 10, 10)
+```
+
+The model we create is going to try and learn the relationship between `X_train` and `y_train` and then we will evaluate what it learns on `X_test` and `y_test`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NDExODQxMDYsNzY3ODkyNjQsLTIxMT
-E2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQz
-MiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMzgxMzAzMzEyLDc2Nzg5MjY0LC0yMTExNj
+YzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIs
+LTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
