md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -138,8 +138,21 @@ len(X_train), len(y_train), len(X_test), len(y_test)
 ```
 
 The model we create is going to try and learn the relationship between `X_train` and `y_train` and then we will evaluate what it learns on `X_test` and `y_test`.
+
+
+```py
+def plot_predictions(train_data=X_train,train_labels=y_train,test_data=X_test,test_labels=y_test,predictions=None):
+  plt.figure(figsize=(10, 7))
+  plt.scatter(train_data, train_labels, c="b", s=4, label="Training data") # Plot training data in blue
+  plt.scatter(test_data, test_labels, c="g", s=4, label="Testing data") # Plot test data in green
+  if predictions is not None:
+    # Plot the predictions in red (predictions were made on the test data)
+    plt.scatter(test_data, predictions, c="r", s=4, label="Predictions")
+  plt.legend(prop={"size": 14}); # Show the legend
+plot_predictions()
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzgxMzAzMzEyLDc2Nzg5MjY0LC0yMTExNj
-YzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIs
-LTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTE2NTI3OTU4OSw3Njc4OTI2NCwtMjExMT
+Y2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMy
+LC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
