md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -151,9 +151,9 @@ def plot_predictions(train_data=X_train,train_labels=y_train,test_data=X_test,te
   plt.legend(prop={"size": 14}); # Show the legend
 plot_predictions()
 ```
-<img  src="https://ibb.co/x6f0j3h" alt="a pytorch workflow flowchat"/> 
+<img  src="https://i.imgur.com/TMpy5S3.png" alt="data visualisation"/> 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTY4MjgwNTEsMTg2MjMyNjc3MCw3Nj
+eyJoaXN0b3J5IjpbLTE0OTY5NzA5MzUsMTg2MjMyNjc3MCw3Nj
 c4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3
 NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
