md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -152,8 +152,12 @@ def plot_predictions(train_data=X_train,train_labels=y_train,test_data=X_test,te
 plot_predictions()
 ```
 <img  src="https://i.imgur.com/TMpy5S3.png" alt="data visualisation"/> 
+
+## 2. Build a model
+
+Now we've got some data, let's build a model to use the blue dots to predict the green dots.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTY5NzA5MzUsMTg2MjMyNjc3MCw3Nj
-c4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3
-NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nz
+g5MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0
+MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
