md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -156,8 +156,10 @@ plot_predictions()
 ## 2. Build a model
 
 Now we've got some data, let's build a model to use the blue dots to predict the green dots.
+https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb#scrollTo=Build_model
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nz
-g5MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0
-MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2Mj
+MyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4
+LDE1NjEyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMD
+k5ODExNl19
 -->
