md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -1,6 +1,7 @@
 # [01. PyTorch Workflow Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb)
 
 * [learnpytorch.io link](https://www.learnpytorch.io/01_pytorch_workflow/)
+* [PyTorch Cheat Sheet](https://pytorch.org/tutorials/beginner/ptcheat.html)
 
 ---
 
@@ -158,8 +159,8 @@ plot_predictions()
 Now we've got some data, let's build a model to use the blue dots to predict the green dots.
 https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb#scrollTo=Build_model
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2Mj
-MyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4
-LDE1NjEyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMD
-k5ODExNl19
+eyJoaXN0b3J5IjpbLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MD
+E4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAw
+LDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2OD
+ExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
