md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -157,10 +157,25 @@ plot_predictions()
 ## 2. Build a model
 
 Now we've got some data, let's build a model to use the blue dots to predict the green dots.
-https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb#scrollTo=Build_model
+```py
+class LinearRegressionModel(nn.Module): # <- almost everything in PyTorch is a nn.Module (think of this as neural network lego blocks)
+    def __init__(self):
+        super().__init__() 
+        self.weights = nn.Parameter(torch.randn(1, # <- start with random weights (this will get adjusted as the model learns)
+                                                dtype=torch.float), # <- PyTorch loves float32 by default
+                                   requires_grad=True) # <- can we update this value with gradient descent?)
+
+        self.bias = nn.Parameter(torch.randn(1, # <- start with random bias (this will get adjusted as the model learns)
+                                            dtype=torch.float), # <- PyTorch loves float32 by default
+                                requires_grad=True) # <- can we update this value with gradient descent?))
+
+    # Forward defines the computation in the model
+    def forward(self, x: torch.Tensor) -> torch.Tensor: # <- "x" is the input data (e.g. training/testing features)
+        return self.weights * x + self.bias # <- this is the linear regression formula (y = m*x + b)
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MD
-E4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAw
-LDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2OD
-ExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNjE3MzYzNjEyLC02OTExMDE2NzgsNjY3Nj
+Y1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwt
+MjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1Mj
+MzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
