md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -173,9 +173,42 @@ class LinearRegressionModel(nn.Module): # <- almost everything in PyTorch is a n
     def forward(self, x: torch.Tensor) -> torch.Tensor: # <- "x" is the input data (e.g. training/testing features)
         return self.weights * x + self.bias # <- this is the linear regression formula (y = m*x + b)
 ```
+PyTorch has four (give or take) essential modules you can use to create almost any kind of neural network you can imagine. They are  [`torch.nn`](https://pytorch.org/docs/stable/nn.html),  [`torch.optim`](https://pytorch.org/docs/stable/optim.html),  [`torch.utils.data.Dataset`](https://pytorch.org/docs/stable/data.html#torch.utils.data.Dataset)  and  [`torch.utils.data.DataLoader`](https://pytorch.org/docs/stable/data.html). For now, we'll focus on the first two and get to the other two later (though you may be able to guess what they do).
+
+<table>
+<thead>
+<tr>
+  <th>PyTorch module</th>
+  <th>What does it do?</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/nn.html"><code>torch.nn</code></a></td>
+  <td>Contains all of the building blocks for computational graphs (essentially a series of computations executed in a particular way).</td>
+</tr>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/generated/torch.nn.parameter.Parameter.html#parameter"><code>torch.nn.Parameter</code></a></td>
+  <td>Stores tensors that can be used with <code>nn.Module</code>. If <code>requires_grad=True</code> gradients (used for updating model parameters via <a href="https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html"><strong>gradient descent</strong></a>)  are calculated automatically, this is often referred to as "autograd".</td>
+</tr>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module"><code>torch.nn.Module</code></a></td>
+  <td>The base class for all neural network modules, all the building blocks for neural networks are subclasses. If you're building a neural network in PyTorch, your models should subclass <code>nn.Module</code>. Requires a <code>forward()</code> method be implemented.</td>
+</tr>
+<tr>
+  <td><a href="https://pytorch.org/docs/stable/optim.html"><code>torch.optim</code></a></td>
+  <td>Contains various optimization algorithms (these tell the model parameters stored in <code>nn.Parameter</code> how to best change to improve gradient descent and in turn reduce the loss).</td>
+</tr>
+<tr>
+  <td><code>def forward()</code></td>
+  <td>All <code>nn.Module</code> subclasses require a <code>forward()</code> method, this defines the computation that will take place on the data passed to the particular <code>nn.Module</code> (e.g. the linear regression formula above).</td>
+</tr>
+</tbody>
+</table>
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjE3MzYzNjEyLC02OTExMDE2NzgsNjY3Nj
-Y1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwt
-MjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1Mj
-MzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEwNjQzMjQ2MTUsLTY5MTEwMTY3OCw2Nj
+c2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0
+LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOT
+UyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
