md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -206,9 +206,22 @@ PyTorch has four (give or take) essential modules you can use to create almost a
 </tbody>
 </table>
 
+If the above sounds complex, think of like this, almost everything in a PyTorch neural network comes from `torch.nn`:
+<ul>
+<li><code>nn.Module</code> contains the larger building blocks (layers)</li>
+<li><code>nn.Parameter</code> contains the smaller parameters like weights and biases (put these together to make <code>nn.Module</code>(s))</li>
+<li><code>forward()</code> tells the larger blocks how to make calculations on inputs (tensors full of data) within  <code>nn.Module</code>(s)</li>
+<li><code>torch.optim</code> contains optimization methods on how to improve the parameters within <code>nn.Parameter</code> to better represent input data</li>
+</ul>
+
+<img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-linear-model-annotated.png" alt="a pytorch linear model with annotations">
+
+###  Checking the contents of a PyTorch model
+
+Now we've got these out of the way, let's create a model instance with the class we've made and check its parameters using  [`.parameters()`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.parameters).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjQzMjQ2MTUsLTY5MTEwMTY3OCw2Nj
-c2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0
-LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOT
-UyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMzI3MzU4MTI1LC02OTExMDE2NzgsNjY3Nj
+Y1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwt
+MjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1Mj
+MzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
