md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -162,13 +162,11 @@ class LinearRegressionModel(nn.Module): # <- almost everything in PyTorch is a n
     def __init__(self):
         super().__init__() 
         self.weights = nn.Parameter(torch.randn(1, # <- start with random weights (this will get adjusted as the model learns)
-                                                dtype=torch.float), # <- PyTorch loves float32 by default
+				                                dtype=torch.float), # <- PyTorch loves float32 by default
                                    requires_grad=True) # <- can we update this value with gradient descent?)
-
         self.bias = nn.Parameter(torch.randn(1, # <- start with random bias (this will get adjusted as the model learns)
                                             dtype=torch.float), # <- PyTorch loves float32 by default
                                 requires_grad=True) # <- can we update this value with gradient descent?))
-
     # Forward defines the computation in the model
     def forward(self, x: torch.Tensor) -> torch.Tensor: # <- "x" is the input data (e.g. training/testing features)
         return self.weights * x + self.bias # <- this is the linear regression formula (y = m*x + b)
@@ -218,10 +216,20 @@ If the above sounds complex, think of like this, almost everything in a PyTorch 
 
 ###  Checking the contents of a PyTorch model
 
-Now we've got these out of the way, let's create a model instance with the class we've made and check its parameters using  [`.parameters()`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.parameters).
+Let's create a model instance with the class we've made and check its parameters using  [`.parameters()`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.parameters).
+
+```py
+# Set manual seed since nn.Parameter are randomly initialzied
+torch.manual_seed(42)
+# Create an instance of the model (this is a subclass of nn.Module that contains nn.Parameter(s))
+model_0 = LinearRegressionModel()
+# Check the nn.Parameter(s) within the nn.Module subclass we created
+list(model_0.parameters())
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzI3MzU4MTI1LC02OTExMDE2NzgsNjY3Nj
-Y1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwt
-MjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1Mj
-MzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTY5NDU4MTE3OCwzMjczNTgxMjUsLTY5MT
+EwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2Nzcw
+LDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MT
+IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
+XX0=
 -->
