md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -226,8 +226,20 @@ model_0 = LinearRegressionModel()
 # Check the nn.Parameter(s) within the nn.Module subclass we created
 list(model_0.parameters())
 ```
+```cpp
+[Parameter containing:
+ tensor([0.3367], requires_grad=True),
+ Parameter containing:
+ tensor([0.1288], requires_grad=True)]
+```
+  
+We can also get the state (what the model contains) of the model using [`.state_dict()`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.state_dict).
+```py
+```cpp
+OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5NDU4MTE3OCwzMjczNTgxMjUsLTY5MT
+eyJoaXN0b3J5IjpbMTU5ODU2ODY4NCwzMjczNTgxMjUsLTY5MT
 EwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2Nzcw
 LDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MT
 IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
