--- a/md/01.md
+++ b/md/01.md
@@ -234,14 +234,18 @@ list(model_0.parameters())
 ```
   
 We can also get the state (what the model contains) of the model using [`.state_dict()`](https://pytorch.org/docs/stable/generated/torch.nn.Module.html#torch.nn.Module.state_dict).
+
 ```py
+model_0.state_dict()
+```
+
 ```cpp
 OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU5ODU2ODY4NCwzMjczNTgxMjUsLTY5MT
-EwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2Nzcw
-LDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MT
-IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
-XX0=
+eyJoaXN0b3J5IjpbLTEyNTM5NDY5MTksMzI3MzU4MTI1LC02OT
+ExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3
+MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1Nj
+EyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODEx
+Nl19
 -->
