md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -242,10 +242,16 @@ model_0.state_dict()
 ```cpp
 OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])
 ```
+
+### Making predictions using  `torch.inference_mode()`
+
+We can pass the model the test data  `X_test`  to see how closely it predicts  `y_test`. When we pass data to our model, it'll go through the model's  `forward()`  method and produce a result using the computation we've defined. Let's make some predictions.
+
+```py
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTM5NDY5MTksMzI3MzU4MTI1LC02OT
-ExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2MzUsMTg2MjMyNjc3
-MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0MzE4LDE1Nj
-EyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbLTM3MzU1ODM3OSwtMTI1Mzk0NjkxOSwzMj
+czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
+NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
+UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
+ODgsNzMwOTk4MTE2XX0=
 -->
