md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -245,13 +245,29 @@ OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])
 
 ### Making predictions using  `torch.inference_mode()`
 
-We can pass the model the test data  `X_test`  to see how closely it predicts  `y_test`. When we pass data to our model, it'll go through the model's  `forward()`  method and produce a result using the computation we've defined. Let's make some predictions.
+We can pass the model the test data  `X_test`  to see how closely it predicts  `y_test`. When we pass data to our model, it'll go through the model's  `forward()`  method and produce a result using the computation we've defined. Let's make some predictions. `torch.inference_mode()` turns off a bunch of things (like gradient tracking, which is necessary for training but not for inference) to make *forward-passes* (data going through the `forward()` method) faster.
 
 ```py
+with torch.inference_mode(): 
+    y_preds = model_0(X_test)
+    print(y_preds)
+```
+```cpp
+tensor([[0.3982],
+        [0.4049],
+        [0.4116],
+        [0.4184],
+        [0.4251],
+        [0.4318],
+        [0.4386],
+        [0.4453],
+        [0.4520],
+        [0.4588]])
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM3MzU1ODM3OSwtMTI1Mzk0NjkxOSwzMj
-czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
-NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
-UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
-ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNjc3NjM4OTI1LC0xMjUzOTQ2OTE5LDMyNz
+M1ODEyNSwtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1
+LDE4NjIzMjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NT
+M5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4
+OCw3MzA5OTgxMTZdfQ==
 -->
