md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -268,11 +268,11 @@ Let's **visualize** the data.
 ```py
 plot_predictions(predictions=y_preds)
 ```
-https://imgur.com/a/U317Y3j
+<img src="https://i.imgur.com/waKJgv7.png">
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTAxNzA1NTMsLTEyNTM5NDY5MTksMz
-I3MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2
-MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNj
-Y1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3
-NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTQwMTQ2NjQyMCwtMTI1Mzk0NjkxOSwzMj
+czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
+NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
+UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
+ODgsNzMwOTk4MTE2XX0=
 -->
