md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -272,9 +272,9 @@ plot_predictions(predictions=y_preds)
 As you can see, our model is pretty dumb yet. It hasn't even looked at the blue dots to try to learn a pattern. Time to change that.
 
   
-## 3. Train model
+## 3. Train the model
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MzgxODY3MCwtMTI1Mzk0NjkxOSwzMj
+eyJoaXN0b3J5IjpbMTk2NDE3ODQwMSwtMTI1Mzk0NjkxOSwzMj
 czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
 NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
 UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
