--- a/md/01.md
+++ b/md/01.md
@@ -275,25 +275,15 @@ As you can see, our model is pretty dumb yet. It hasn't even looked at the blue 
 ## 3. Train the model
 Right now our model is making predictions using random parameters to make calculations, it's basically guessing (randomly).
 
-  
+To fix that, we can update its internal parameters (I also refer to *parameters* as patterns), the `weights` and `bias` values we set randomly using `nn.Parameter()` and `torch.randn()` to be something that better represents the data. We could hard code this (since we know the default values `weight=0.7` and `bias=0.3`) but where's the fun in that? Most of the time you won't know what the ideal parameters are for a model. Instead, it's much more fun to write code to see if the model can try and figure them out itself.
 
-To fix that, we can update its internal parameters (I also refer to *parameters* as patterns), the `weights` and `bias` values we set randomly using `nn.Parameter()` and `torch.randn()` to be something that better represents the data.
+### Creating a loss function and optimizer in PyTorch
 
-
-
-We could hard code this (since we know the default values `weight=0.7` and `bias=0.3`) but where's the fun in that?
-
-  
-
-Much of the time you won't know what the ideal parameters are for a model.
-
-  
-
-Instead, it's much more fun to write code to see if the model can try and figure them out itself.
+For our model to update its parameters on its own, we'll need to add a few more things to our recipe. That's a **loss function** and an **optimizer**.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczMjk1MzY0NywtMTI1Mzk0NjkxOSwzMj
-czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
-NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
-UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
-ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTIzNzMwNDUzLC0xMjUzOTQ2OTE5LDMyNz
+M1ODEyNSwtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1
+LDE4NjIzMjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NT
+M5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4
+OCw3MzA5OTgxMTZdfQ==
 -->
