md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -280,10 +280,35 @@ To fix that, we can update its internal parameters (I also refer to *parameters*
 ### Creating a loss function and optimizer in PyTorch
 
 For our model to update its parameters on its own, we'll need to add a few more things to our recipe. That's a **loss function** and an **optimizer**.
+
+<table>
+<thead>
+<tr>
+  <th>Function</th>
+  <th>What does it do?</th>
+  <th>Where does it live in PyTorch?</th>
+  <th>Common values</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td><strong>Loss function</strong></td>
+  <td>Measures how wrong your models predictions (e.g. <code>y_preds</code>) are compared to the truth labels (e.g. <code>y_test</code>). Lower the better.</td>
+  <td>PyTorch has plenty of built-in loss functions in <a href="https://pytorch.org/docs/stable/nn.html#loss-functions"><code>torch.nn</code></a>.</td>
+  <td>Mean absolute error (MAE) for regression problems (<a href="https://pytorch.org/docs/stable/generated/torch.nn.L1Loss.html"><code>torch.nn.L1Loss()</code></a>). Binary cross entropy for binary classification problems (<a href="https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html"><code>torch.nn.BCELoss()</code></a>).</td>
+</tr>
+<tr>
+  <td><strong>Optimizer</strong></td>
+  <td>Tells your model how to update its internal parameters to best lower the loss.</td>
+  <td>You can find various optimization function implementations in <a href="https://pytorch.org/docs/stable/optim.html"><code>torch.optim</code></a>.</td>
+  <td>Stochastic gradient descent (<a href="https://pytorch.org/docs/stable/generated/torch.optim.SGD.html#torch.optim.SGD"><code>torch.optim.SGD()</code></a>). Adam optimizer (<a href="https://pytorch.org/docs/stable/generated/torch.optim.Adam.html#torch.optim.Adam"><code>torch.optim.Adam()</code></a>).</td>
+</tr>
+</tbody>
+</table>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIzNzMwNDUzLC0xMjUzOTQ2OTE5LDMyNz
-M1ODEyNSwtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1
-LDE4NjIzMjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NT
-M5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4
-OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMj
+czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
+NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
+UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
+ODgsNzMwOTk4MTE2XX0=
 -->
