md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -305,10 +305,20 @@ For our model to update its parameters on its own, we'll need to add a few more 
 </tr>
 </tbody>
 </table>
+
+Let's see it in code:
+```py
+# Create the loss function
+loss_fn = nn.L1Loss() # MAE loss is same as L1Loss
+
+# Create the optimizer
+optimizer = torch.optim.SGD(params=model_0.parameters(), # parameters of target model to optimize
+                            lr=0.01) # learning rate (how much the optimizer should change parameters at each step, higher=more (less stable), lower=less (might take a long time))
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3NDg4MjkxNCwtMTI1Mzk0NjkxOSwzMj
-czNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMTU2MDE4NTYz
-NSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYzNDAwLDE2Nj
-UzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0
-ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNzAyODQ0ODA3LC03NzQ4ODI5MTQsLTEyNT
+M5NDY5MTksMzI3MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4
+LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMT
+Y2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMy
+LC0xNjgxMTE3NDg4LDczMDk5ODExNl19
 -->
