md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -315,10 +315,20 @@ loss_fn = nn.L1Loss() # MAE loss is same as L1Loss
 optimizer = torch.optim.SGD(params=model_0.parameters(), # parameters of target model to optimize
                             lr=0.01) # learning rate (how much the optimizer should change parameters at each step, higher=more (less stable), lower=less (might take a long time))
 ```
+
+### Creating an optimization loop in PyTorch
+
+Now that we've got a loss function and an optimizer, it's now time to create a  **training loop**  (and  **testing loop**).
+
+The training loop involves the model going through the training data and learning the relationships between the  `features`  and  `labels`.
+
+The testing loop involves going through the testing data and evaluating how good the patterns are that the model learned on the training data (the model never see's the testing data during training).
+
+Each of these is called a "loop" because we want our model to look (loop through) at each sample in each dataset.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzAyODQ0ODA3LC03NzQ4ODI5MTQsLTEyNT
-M5NDY5MTksMzI3MzU4MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4
-LDE1NjAxODU2MzUsMTg2MjMyNjc3MCw3Njc4OTI2NCwtMjExMT
-Y2MzQwMCwxNjY1Mzk0MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMy
-LC0xNjgxMTE3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMT
+I1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5
+ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMT
+ExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0
+MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
