md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -325,10 +325,57 @@ The training loop involves the model going through the training data and learnin
 The testing loop involves going through the testing data and evaluating how good the patterns are that the model learned on the training data (the model never see's the testing data during training).
 
 Each of these is called a "loop" because we want our model to look (loop through) at each sample in each dataset.
+
+For the **training loop**, we'll build the following steps:
+
+<table>
+<thead>
+<tr>
+  <th>Number</th>
+  <th>Step name</th>
+  <th>What does it do?</th>
+  <th>Code example</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>1</td>
+  <td>Forward pass</td>
+  <td>The model goes through all of the training data once, performing its <code>forward()</code> function calculations.</td>
+  <td><code>model(x_train)</code></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>Calculate the loss</td>
+  <td>The model's outputs (predictions) are compared to the ground truth and evaluated to see how wrong they are.</td>
+  <td><code>loss = loss_fn(y_pred, y_train)</code></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>Zero gradients</td>
+  <td>The optimizers gradients are set to zero (they are accumulated by default) so they can be recalculated for the specific training step.</td>
+  <td><code>optimizer.zero_grad()</code></td>
+</tr>
+<tr>
+  <td>4</td>
+  <td>Perform backpropagation on the loss</td>
+  <td>Computes the gradient of the loss with respect for every model parameter to be updated  (each parameter with <code>requires_grad=True</code>). This is known as <strong>backpropagation</strong>, hence "backwards".</td>
+  <td><code>loss.backward()</code></td>
+</tr>
+<tr>
+  <td>5</td>
+  <td>Update the optimizer (<strong>gradient descent</strong>)</td>
+  <td>Update the parameters with <code>requires_grad=True</code> with respect to the loss gradients in order to improve them.</td>
+  <td><code>optimizer.step()</code></td>
+</tr>
+</tbody>
+</table>
+<img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-training-loop-annotated.png" alt="pytorch training loop annotated">
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMT
-I1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5
-ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMT
-ExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0
-MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTc5MDM1MTQzNywtMTQ4MTI0Mzg1NCwtNz
+c0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAx
+Njc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNz
+Y3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2
+NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ
+==
 -->
