md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -371,8 +371,17 @@ For the **training loop**, we'll build the following steps:
 </tbody>
 </table>
 <img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-training-loop-annotated.png" alt="pytorch training loop annotated">
+
+**Note:** The above is just one example of how the steps could be ordered or described. With experience you'll find making PyTorch training loops can be quite flexible.
+
+
+ And on the ordering of things, the above is a good default order but you may see slightly different orders. Some rules of thumb:
+ 
+  * Calculate the loss (`loss = ...`) *before* performing backpropagation on it (`loss.backward()`).
+  * Zero gradients (`optimizer.zero_grad()`) *before* stepping them (`optimizer.step()`).
+ * Step the optimizer (`optimizer.step()`) *after* performing backpropagation on the loss (`loss.backward()`).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc5MDM1MTQzNywtMTQ4MTI0Mzg1NCwtNz
+eyJoaXN0b3J5IjpbLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNz
 c0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAx
 Njc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNz
 Y3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2
