md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -326,7 +326,9 @@ The testing loop involves going through the testing data and evaluating how good
 
 Each of these is called a "loop" because we want our model to look (loop through) at each sample in each dataset.
 
-For the **training loop**, we'll build the following steps:
+### PyTorch training loop
+
+For the training loop, we'll build the following steps:
 
 <table>
 <thead>
@@ -380,11 +382,15 @@ For the **training loop**, we'll build the following steps:
   * Calculate the loss (`loss = ...`) *before* performing backpropagation on it (`loss.backward()`).
   * Zero gradients (`optimizer.zero_grad()`) *before* stepping them (`optimizer.step()`).
  * Step the optimizer (`optimizer.step()`) *after* performing backpropagation on the loss (`loss.backward()`).
+
+### PyTorch testing loop
+
+As for the testing loop (evaluating our model), the typical steps include:
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNz
-c0ODgyOTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAx
-Njc4LDY2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNz
-Y3ODkyNjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2
-NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ
-==
+eyJoaXN0b3J5IjpbMTc4MTg1ODAyOCwtNTkyNzMwODM4LC0xND
+gxMjQzODU0LC03NzQ4ODI5MTQsLTEyNTM5NDY5MTksMzI3MzU4
+MTI1LC02OTExMDE2NzgsNjY3NjY1OTg4LDE1NjAxODU2MzUsMT
+g2MjMyNjc3MCw3Njc4OTI2NCwtMjExMTY2MzQwMCwxNjY1Mzk0
+MzE4LDE1NjEyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LD
+czMDk5ODExNl19
 -->
