md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -387,11 +387,45 @@ For the training loop, we'll build the following steps:
 
 As for the testing loop (evaluating our model), the typical steps include:
 
+<table>
+<thead>
+<tr>
+  <th>Number</th>
+  <th>Step name</th>
+  <th>What does it do?</th>
+  <th>Code example</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+  <td>1</td>
+  <td>Forward pass</td>
+  <td>The model goes through all of the training data once, performing its <code>forward()</code> function calculations.</td>
+  <td><code>model(x_test)</code></td>
+</tr>
+<tr>
+  <td>2</td>
+  <td>Calculate the loss</td>
+  <td>The model's outputs (predictions) are compared to the ground truth and evaluated to see how wrong they are.</td>
+  <td><code>loss = loss_fn(y_pred, y_test)</code></td>
+</tr>
+<tr>
+  <td>3</td>
+  <td>Calulate evaluation metrics (optional)</td>
+  <td>Alongisde the loss value you may want to calculate other evaluation metrics such as accuracy on the test set.</td>
+  <td>Custom functions</td>
+</tr>
+</tbody>
+</table>
+
+Notice the testing loop doesn't contain performing backpropagation (`loss.backward()`) or stepping the optimizer (`optimizer.step()`), this is because no parameters in the model are being changed during testing, they've already been calculated. For testing, we're only interested in the output of the forward pass through the model.
+
+<img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-testing-loop-annotated.png" alt="pytorch annotated testing loop">
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzA3MTk5NTE0LDE3ODE4NTgwMjgsLTU5Mj
-czMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgyOTE0LC0xMjUzOTQ2
-OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LDY2NzY2NTk4OCwxNT
-YwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODkyNjQsLTIxMTE2NjM0
-MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC05NTIzMzQzMiwtMT
-Y4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OT
+I3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0
+NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMT
+U2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYz
+NDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLT
+E2ODExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
