md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -421,11 +421,13 @@ As for the testing loop (evaluating our model), the typical steps include:
 Notice the testing loop doesn't contain performing backpropagation (`loss.backward()`) or stepping the optimizer (`optimizer.step()`), this is because no parameters in the model are being changed during testing, they've already been calculated. For testing, we're only interested in the output of the forward pass through the model.
 
 <img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-testing-loop-annotated.png" alt="pytorch annotated testing loop">
+
+Let's put all of the above together and train our model for 100  **epochs**  (forward passes through the data) and we'll evaluate it every 10 epochs.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1NDE0MDU5MSwxNzgxODU4MDI4LC01OT
-I3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4MjkxNCwtMTI1Mzk0
-NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OCw2Njc2NjU5ODgsMT
-U2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5MjY0LC0yMTExNjYz
-NDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MSwtOTUyMzM0MzIsLT
-E2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTU4MDA5NDU4MiwxNTU0MTQwNTkxLDE3OD
+E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
+OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
+Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
+NjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC
+05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
 -->
