--- a/md/01.md
+++ b/md/01.md
@@ -423,8 +423,60 @@ Notice the testing loop doesn't contain performing backpropagation (`loss.backwa
 <img src="https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/01-pytorch-testing-loop-annotated.png" alt="pytorch annotated testing loop">
 
 Let's put all of the above together and train our model for 100  **epochs**  (forward passes through the data) and we'll evaluate it every 10 epochs.
+```py
+torch.manual_seed(42)
+epochs = 100 # Set the number of epochs (how many times the model will pass over the training data)
+# Create empty loss lists to track values
+train_loss_values = []
+test_loss_values = []
+epoch_count = []
+
+for epoch in range(epochs):
+    ### Training
+    model_0.train() # Put model in training mode (this is the default state of a model)
+
+    # 1. Forward pass on train data using the forward() method inside 
+    y_pred = model_0(X_train) # print(y_pred)
+
+    # 2. Calculate the loss (how different are our models predictions to the ground truth)
+    loss = loss_fn(y_pred, y_train)
+
+    # 3. Zero grad of the optimizer
+    optimizer.zero_grad()
+
+    # 4. Loss backwards
+    loss.backward()
+
+    # 5. Progress the optimizer
+    optimizer.step()
+
+    
+    ### Testing
+    model_0.eval() # Put the model in evaluation mode
+
+    with torch.inference_mode():
+      # 1. Forward pass on test data
+      test_pred = model_0(X_test)
+
+      # 2. Caculate loss on test data
+      test_loss = loss_fn(test_pred, y_test.type(torch.float)) # predictions come in torch.float datatype, so comparisons need to be done with tensors of the same type
+
+      # Print out what's happening
+      if epoch % 10 == 0:
+            epoch_count.append(epoch)
+            train_loss_values.append(loss.detach().numpy())
+            test_loss_values.append(test_loss.detach().numpy())
+            print(f"Epoch: {epoch} | MAE Train Loss: {loss} | MAE Test Loss: {test_loss} ")
+```
+```cpp
+Epoch: 0 | MAE Train Loss: 0.31288138031959534 | MAE Test Loss: 0.48106518387794495
+.
+.
+.
+Epoch: 90 | MAE Train Loss: 0.02788739837706089 | MAE Test Loss: 0.06473556160926819
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4MDA5NDU4MiwxNTU0MTQwNTkxLDE3OD
+eyJoaXN0b3J5IjpbLTkwODMzNjgxNCwxNTU0MTQwNTkxLDE3OD
 E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
 OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
 Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
