md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -475,8 +475,17 @@ Epoch: 0 | MAE Train Loss: 0.31288138031959534 | MAE Test Loss: 0.48106518387794
 .
 Epoch: 90 | MAE Train Loss: 0.02788739837706089 | MAE Test Loss: 0.06473556160926819
 ```
+Oh would you look at that! Looks like our loss is going down with every epoch, let's plot it to find out.
+```py
+plt.plot(epoch_count, train_loss_values, label="Train loss")
+plt.plot(epoch_count, test_loss_values, label="Test loss")
+plt.title("Training and test loss curves")
+plt.ylabel("Loss")
+plt.xlabel("Epochs")
+plt.legend();
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkwODMzNjgxNCwxNTU0MTQwNTkxLDE3OD
+eyJoaXN0b3J5IjpbLTYxOTk4OTA1NywxNTU0MTQwNTkxLDE3OD
 E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
 OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
 Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
