md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -484,12 +484,12 @@ plt.ylabel("Loss")
 plt.xlabel("Epochs")
 plt.legend();
 ```
-<img src='https://imgur.com/CylpVuv'>
+<img src="https://i.imgur.com/CylpVuv.png">
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzkwMjM5NDksMTU1NDE0MDU5MSwxNz
-gxODU4MDI4LC01OTI3MzA4MzgsLTE0ODEyNDM4NTQsLTc3NDg4
-MjkxNCwtMTI1Mzk0NjkxOSwzMjczNTgxMjUsLTY5MTEwMTY3OC
-w2Njc2NjU5ODgsMTU2MDE4NTYzNSwxODYyMzI2NzcwLDc2Nzg5
-MjY0LC0yMTExNjYzNDAwLDE2NjUzOTQzMTgsMTU2MTIwNjc0MS
-wtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTM3Mzg2MzAzOSwxNTU0MTQwNTkxLDE3OD
+E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
+OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
+Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
+NjQsLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC
+05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
 -->
