--- a/md/01.md
+++ b/md/01.md
@@ -485,8 +485,22 @@ plt.xlabel("Epochs")
 plt.legend();
 ```
 <img src="https://i.imgur.com/CylpVuv.png">
+
+  
+Nice! The  **loss curves**  show the loss going down over time. Remember, loss is the measure of how  _wrong_  your model is, so the lower the better.
+
+But why did the loss go down?
+
+Well, thanks to our loss function and optimizer, the model's internal parameters (`weights`  and  `bias`) were updated to better reflect the underlying patterns in the data.
+
+Let's inspect our model's  [`.state_dict()`](https://pytorch.org/tutorials/recipes/recipes/what_is_state_dict.html)  to see see how close our model gets to the original values we set for weights and bias.
+
+```py
+
+
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM3Mzg2MzAzOSwxNTU0MTQwNTkxLDE3OD
+eyJoaXN0b3J5IjpbMTY2MzA3OTI2MiwxNTU0MTQwNTkxLDE3OD
 E4NTgwMjgsLTU5MjczMDgzOCwtMTQ4MTI0Mzg1NCwtNzc0ODgy
 OTE0LC0xMjUzOTQ2OTE5LDMyNzM1ODEyNSwtNjkxMTAxNjc4LD
 Y2NzY2NTk4OCwxNTYwMTg1NjM1LDE4NjIzMjY3NzAsNzY3ODky
